Fix macro and app manager app dependencies.

--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -60,7 +60,7 @@
   <script src="/js/libs/fabmo.js"></script>
  
   <script type="text/javascript">
-  	var dashboard = new FabMoDashboard();
+  	var fabmo = new FabMoDashboard();
 
 	function refreshApps(){
 		// Load the list of apps available on the tool
