--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -44,7 +44,7 @@
           <script src="/js/libs/jquery.min.js"></script>
           <script src="/js/libs/foundation.min.js"></script>
           <script src="/js/libs/fabmo.js"></script>
-          <script src="./js/libs/jquery.dataTables.js"></script>
+          <script src="./js/libs/jquery.dataTables.min.js"></script>
           <script src="./js/libs/dataTables.foundation.js"></script>
           <script src="./js/libs/moment.js"></script>
 
