--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -168,14 +168,31 @@
                 </li>
               </ul>
             </div>
+
             <div id="handwheel" class="widget fabmo-manual-control" style="text-align: center;">
               <canvas width="220px" height="220px" id="wheel"></canvas>
             </div>
 
-            <div id="mykeypad" class="widget fabmo-manual-control hide" style="text-align: center; width: 220px; height: 75px;">
-              <div id="keyboard" class="keyboard noselect">Keyboard</div>
-            </div>
+            <div id="keypad" class="widget fabmo-manual-control keypad" style="text-align: center; width:100%">
+              <div class="keypad-row">
+                <div class="keypad-cell"></div>
+                <div class="keypad-cell"><div class="y_pos keypad-button drive-button">Y+</div></div>
+                <div class="keypad-cell"><div class="z_pos keypad-button drive-button">Z+</div></div>
+              </div>
 
+              <div class="keypad-row">
+                <div class="keypad-cell"><div class="x_neg keypad-button drive-button">X-</div></div>
+                <div class="keypad-cell"><div id="keyboard" class="keyboard noselect keypad-button">KB</div></div>
+                <div class="keypad-cell"><div class="x_pos keypad-button drive-button">X+</div></div>
+              </div>
+
+              <div class="keypad-row">
+                <div class="keypad-cell"></div>
+                <div class="keypad-cell"><div class="y_neg keypad-button drive-button">Y-</div></div>
+                <div class="keypad-cell"><div class="z_neg keypad-button drive-button">Z-</div></div>
+              </div>
+    
+            </div>
             <div id="job-info" class="widget">
 
                 <ul class="off-canvas-list fabmo-status fabmo-file-control">
