--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -173,7 +173,7 @@
               <canvas width="220px" height="220px" id="wheel"></canvas>
             </div>
 
-            <div id="keypad" class="widget fabmo-manual-control keypad" style="text-align: center; width:100%">
+            <div id="keypad" class="widget fabmo-manual-control keypad" style="text-align: center;">
               <div class="keypad-row">
                 <div class="keypad-cell"></div>
                 <div class="keypad-cell"><div class="y_pos keypad-button drive-button">Y+</div></div>
@@ -191,8 +191,8 @@
                 <div class="keypad-cell"><div class="y_neg keypad-button drive-button">Y-</div></div>
                 <div class="keypad-cell"><div class="z_neg keypad-button drive-button">Z-</div></div>
               </div>
-    
             </div>
+
             <div id="job-info" class="widget">
 
                 <ul class="off-canvas-list fabmo-status fabmo-file-control">
