Finish draft of keypad. Add proper support for hierarchical elements in configuration app. Add keypad configuration to configuration app. Add fixed moves to fabmoapi. Remove handwheel.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -168,29 +168,38 @@
                 </li>
               </ul>
             </div>
-
+            <!--
             <div id="handwheel" class="widget fabmo-manual-control" style="text-align: center;">
               <canvas width="220px" height="220px" id="wheel"></canvas>
             </div>
+            -->
 
             <div id="keypad" class="widget fabmo-manual-control keypad" style="text-align: center;">
-              <div class="keypad-row">
-                <div class="keypad-cell"></div>
-                <div class="keypad-cell"><div class="y_pos keypad-button drive-button">Y+</div></div>
-                <div class="keypad-cell"><div class="z_pos keypad-button drive-button">Z+</div></div>
-              </div>
+              <div class="keypad-table">
+                <div class="keypad-row">
+                  <div class="keypad-cell"></div>
+                  <div class="keypad-cell"><div class="y_pos keypad-button drive-button">Y+</div></div>
+                  <div class="keypad-cell"><div class="z_pos keypad-button drive-button">Z+</div></div>
+                </div>
 
-              <div class="keypad-row">
-                <div class="keypad-cell"><div class="x_neg keypad-button drive-button">X-</div></div>
-                <div class="keypad-cell"><div id="keyboard" class="keyboard noselect keypad-button">KB</div></div>
-                <div class="keypad-cell"><div class="x_pos keypad-button drive-button">X+</div></div>
-              </div>
+                <div class="keypad-row">
+                  <div class="keypad-cell"><div class="x_neg keypad-button drive-button">X-</div></div>
+                  <div class="keypad-cell"><div id="keyboard" class="keyboard noselect keyboard-button keypad-button">KB</div></div>
+                  <div class="keypad-cell"><div class="x_pos keypad-button drive-button">X+</div></div>
+                </div>
 
-              <div class="keypad-row">
-                <div class="keypad-cell"></div>
-                <div class="keypad-cell"><div class="y_neg keypad-button drive-button">Y-</div></div>
-                <div class="keypad-cell"><div class="z_neg keypad-button drive-button">Z-</div></div>
+                <div class="keypad-row">
+                  <div class="keypad-cell"></div>
+                  <div class="keypad-cell"><div class="y_neg keypad-button drive-button">Y-</div></div>
+                  <div class="keypad-cell"><div class="z_neg keypad-button drive-button">Z-</div></div>
+                </div>
               </div>
+              <!--
+              <div>
+                <div style="width: 50%; padding: 4px;"><div class="keypad-button settings-button">Settings</div></div>
+                <div style="width: 50%"></div>                
+              </div>
+              -->
             </div>
 
             <div id="job-info" class="widget">
