Remove dead code

--- a/dashboard/static/test/index.html
+++ b/dashboard/static/test/index.html
@@ -15,7 +15,7 @@
   <body>
   	<div id="content"></div>
     
-    <script type="text/javascript" src="js/libs/jquery.js"></script>
+    <script type="text/javascript" src="js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="js/libs/fabmoapi.js"></script>
   </body>
   <script type="text/javascript">
