--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -25,7 +25,7 @@
       <li class=""><a id="nav-history" href="#tabhistory">History</a></li>
       
     </ul>
-    <ul class="right">
+    <ul class="left">
       <li><a id="nav-submit" class="submit-button" href="#">Submit Job...</a></li>
     </ul>
   </section>
