--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -18,7 +18,7 @@
             <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
           </ul>
           <section class="top-bar-section">
-            <ul class="right">
+            <ul class="left">
               <li><a id="macro-new" href="#">Create new macro...</a></li>
             </ul>
           </section>
