--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -293,17 +293,23 @@
             </div>
           </div> 
         </div>
-        <div class="large-4 columns">
-          <div class="row collapse">
-            <label>Shear Angle X</label>
-            <div class="small-9 columns">
-              <input type="number" id="opensbp-transforms-shearx-angle" class="opensbp-input"/>
-            </div>
-            <div class="small-3 columns">
-              <span class="postfix">degrees</span>
-            </div>
-          </div> 
-        </div>
+      </fieldset>
+    </div>
+
+    <div class="row">
+      <fieldset>
+        <legend>Shear X</legend>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Shear Angle X</label>
+              <div class="small-9 columns">
+                <input type="number" id="opensbp-transforms-shearx-angle" class="opensbp-input"/>
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">degrees</span>
+              </div>
+            </div> 
+          </div>
         <div class="large-4 columns">
           <div class="row collapse">
             <label>Shear Angle Y</label>
@@ -315,22 +321,7 @@
             </div>
           </div> 
         </div>
-      </fieldset>
-    </div>
 
-    <div class="row">
-      <fieldset>
-        <legend>Shear X</legend>
-        <div class="large-4 columns">
-            <div class="row collapse">
-              <label>Shear X
-                <select id="opensbp-transforms-shearx-apply" class="opensbp-input">
-                  <option value="false">Disabled</option>
-                  <option value="true">Enabled</option>
-                </select>
-              </label>
-            </div>
-        </div>
         <div class="large-4 columns">
           <div class="row collapse">
             <label>Shear Angle X</label>
@@ -1680,10 +1671,12 @@
       });
 
       $('.opensbp-values').change( function() {
-        var parts = this.id.split("_");
+        var parts = this.id.split("-");
         var new_config = {};
         new_config.driver = {};
         var v = parts[1];
+  console.log("v = " + v );
+  console.log("this.value = " + this.value );
         if (!configData) { return;}
         if(v !== undefined) {
           if(v === "units1"){
