Add message argument to PAUSE and END statements

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -255,11 +255,15 @@
 
       <!-- The Dialog -->
       <div id="modalDialog" class="reveal-modal" data-reveal aria-labelledby="modalDialogTitle" aria-hidden="true" role="dialog" data-options="close_on_background_click:false;">
-        <h2 id="modaDialoglTitle"></h2>
-        <p id="modalDialogLead" class="lead"></p>
-        <p id="modalDialogMessage"></p>
-        <div id="modalDialogDetail"></div>        
-        <a class="close-reveal-modal">&#215;</a>
+        <h2 id="modaDialoglTitle" class="hide"></h2>
+        <p id="modalDialogLead" class="lead hide"></p>
+        <p id="modalDialogMessage" class="hide"></p>
+        <div id="modalDialogDetail" class="hide"></div>
+        <div id="modalDialogButtons" class="hide">
+          <a id="modalDialogCancelButton" class="med button alert radius" style="border: 2px solid black;">&nbsp;</a>
+          <a id="modalDialogOKButton" class="med button success radius" style="border: 2px solid black;">&nbsp;</a>
+        </div>        
+        <a class="close-reveal-modal" id="modalDialogClose">&#215;</a>
       </div>
 
       <div id="disconnectDialog" class="reveal-modal small" data-reveal aria-labelledby="disconnectDialogTitle" aria-hidden="true" role="dialog" data-options="close_on_background_click:false; close_on_esc:false;">
